--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,5 @@
 # ===========================================
-# Cerina Backend - Environment Configuration
+# CBT Backend - Environment Configuration
 # ===========================================
 # Copy this file to .env and fill in your values
 
@@ -11,7 +11,7 @@ OPENAI_MODEL=gpt-4o
 
 # PostgreSQL Database URL
 # Format: postgresql://user:password@host:port/database
-DATABASE_URL=postgresql://cerina:cerina@localhost:5432/cerina
+DATABASE_URL=postgresql://cbt:cbt@localhost:5432/cbt
 
 # Server Configuration
 HOST=0.0.0.0
